feat(api,spec): connection requests, accepting from listings and connections
